Made caption display, and stretched images to fill the slider. Not convinced that's the correct thing to do, though as I'll be requesting a resized image, it should work.

--- a/atkins-slider.css
+++ b/atkins-slider.css
@@ -25,6 +25,14 @@
 	display: block;
 }
 
+img.slider-image {
+	width: 100% !important;
+	height: 100% !important;
+	position: absolute;
+	border: 0;
+	margin: 0;
+}
+
 .slider-caption {
 	position: absolute;
 	left: 0;
